<resources>
    <string name="app_name">Pen To Paper Writers LTD</string>
    <string name="App">Pen To Paper Writers LTD</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">------Or Login With------</string>
    <string name="don_t_have_an_account">Don\'t Have an account</string>
    <string name="reset_password">Reset Password</string>
    <string name="hooray_a_password_reset_link_has_been_sent_to_your_email_account_click_on_the_link_to_reset_your_passowrd">Hooray! a password reset link has been sent to your email account. Click on the link to reset your passowrd.</string>
    <string name="back_to_login">Back To Login</string>
    <string name="tag">Transforming The World Through Imagination</string>
    <string name="full_names">Full Names</string>
    <string name="phone_number">Phone Number</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_sales_records_here">Enter Sales Records Here</string>
    <string name="select_book_category">Select Book Category</string>
    <string name="select_book_name">Select Book Name</string>
    <string name="amount">Amount of Books Given</string>
    <string name="name">My Target Sale</string>
    <string name="add">Add</string>
    <string name="title">title</string>
    <string name="todo">TODO</string>
    <string name="choose_date">Choose Date</string>
    <string-array name="bookTypes">
        <item>Select Book Category</item>
        <item>Bible Stories</item>
        <item>Bedtime Stories</item>
        <item>Activity Workbooks</item>
    </string-array>
    <string-array name="BibleStories">
        <item>Select Book Name</item>
        <item>In The Beginning</item>
        <item>Adam &amp; Eve</item>
        <item>Cain &amp; Abel</item>
        <item>Noah\'s ARk</item>
        <item>Abraham Faith Tested</item>
        <item>The 10 Plaques</item>
        <item>The Burning Bush</item>
        <item>The Tower of Babel</item>
    </string-array>
    <string-array name="BedtimeStories">
        <item>Select Book Name</item>
        <item>The Magical Story of Rapunzel</item>
        <item>Snow White</item>
    </string-array>
    <string-array name="ActivityWorkbooks">
        <item >Select Book Name</item>
        <item>Animals</item>
        <item>Numbers</item>
        <item>Alphabets</item>
        <item>Vowels</item>
        <item>Coloring Book</item>
        <item>Parts of the Body</item>
        <item>Sehemu Za Mwili</item>
        <item>Shapes</item>
        <item>ALphabet Chart</item>
        <item>Weather</item>
    </string-array>
</resources>