<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/App"
        android:textSize="55sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/logo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email_address">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/baseline_person_24"
            android:ellipsize="start"
            android:background="@drawable/textinput"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:elevation="45dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/baseline_lock_24"
            android:ellipsize="start"
            app:passwordToggleEnabled="true"
            android:background="@drawable/textinput"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginEnd="35dp"
        android:textAlignment="textEnd"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_background"
        android:elevation="40dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/or_login_with"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/google"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:elevation="25dp"
            android:background="@drawable/google"
            android:contentDescription="TODO" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:elevation="25dp"
            android:background="@drawable/facebook"
            android:contentDescription="TODO" />

    </LinearLayout>
    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/don_t_have_an_account"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>
</LinearLayout>