<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginActivity"
    android:background="@drawable/background"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/App"
        android:textSize="55sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/baseline_person_24"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hooray_a_password_reset_link_has_been_sent_to_your_email_account_click_on_the_link_to_reset_your_passowrd"
        android:layout_marginEnd="35dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/backtologin"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_background"
        android:elevation="40dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>