<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".User.newRecordFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="10dp"
        app:collapseIcon="@drawable/menu_back"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white">
        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:src="@drawable/menu_back"/>
        <TextView
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="15dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="20sp"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_below="@id/toolbar"
        android:background="@color/white"
        android:elevation="20dp"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_sales_records_here"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="100dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/select_book_category"
                android:textColorHint="@color/teal_700"
                app:ms_dropdown_max_height="350dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:popupBackground="@color/white"
                android:spinnerMode="dropdown"
                android:background="@drawable/spinner_outline" />

            <ImageView
                android:id="@+id/dropdown1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:contentDescription="@string/todo" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Spinner
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/select_book_name"
                android:textColorHint="@color/teal_700"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"

                android:background="@drawable/textinput" />

            <ImageView
                android:id="@+id/dropdown2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/baseline_arrow_drop_down_24"
                android:contentDescription="TODO" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BookName"
            android:background="@drawable/textinput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/target"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalAmount"
            android:background="@drawable/textinput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/targetS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/target"
            android:background="@drawable/textinput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choose_date"
                android:paddingBottom="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:background="@android:color/transparent"
                android:inputType="none"
                android:focusable="false"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:elevation="50dp"
            app:cornerRadius="10dp"
            android:textColor="@color/white"
            android:text="@string/add"
            android:background="@drawable/button_background"
            android:layout_marginTop="22dp"/>
    </LinearLayout>

</RelativeLayout>